Fixed footer icon alignment

--- a/css/main.css
+++ b/css/main.css
@@ -120,4 +120,6 @@ footer {
 
 .footer_content > a {
     margin: 20px;
+
+    vertical-align: middle;
 }
